<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/enter_email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/enter_password"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/poppins_regular"
            android:padding="10dp"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/things"
            android:fontFamily="@font/poppins_regular"
            android:padding="10dp"
            android:text="@string/btn_sign_up" />

    </LinearLayout>

</LinearLayout>