<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@color/dark_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="#3A4047"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:padding="5dp"
            android:src="@drawable/ic_keyboard_backspace" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/things"
            android:orientation="vertical"
            android:padding="10dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_launcher_background" />


            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="1"
                android:background="@color/things"
                android:text="@string/ramizbek"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="10dp"
                android:text="@string/btn_save"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/design_default_color_primary"
                android:visibility="gone"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>